--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -3,6 +3,7 @@ import Layout from '../../layouts/Base.astro'
 import Container from '../../components/Container.astro';
 import BlogPostPreview from '../../components/BlogPostPreview.astro';
 import Paginator from '../../components/Paginator.astro'
+import Header from '../../components/Header.astro';
   
   
 export async function getStaticPaths({paginate}) {
@@ -39,6 +40,7 @@ const { page } = Astro.props;
 
 
 <Layout seo={seo} >
+  <Header /> <!-- ヘッダーを追加 -->
   <Container>
     <article class="blog-page-content__article">
       <section class="postlist">
